fixing fast response on mobile

--- a/app/assets/stylesheets/leads.css.scss
+++ b/app/assets/stylesheets/leads.css.scss
@@ -36,7 +36,6 @@
 
 .spanFormat{
   text-align: left;
-  display: table-cell;
   margin-left: 7px;
 
   form{
